to save notebook outputs

--- a/PSOFvs2LayerKFOld.ipynb
+++ b/PSOFvs2LayerKFOld.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,9 +194,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration: 10  tr(P_1(t|t)): 9.311780726250285  tr(P_2(t|t)): 9.295542425301058  tr(P_3(t|t)): 4.086329858978596\n",
+      "Iteration: 50  tr(P_1(t|t)): 50.301317841045346  tr(P_2(t|t)): 27.36128584441782  tr(P_3(t|t)): 4.316402704212822\n",
+      "Iteration: 100  tr(P_1(t|t)): 62.485973682304504  tr(P_2(t|t)): 29.005347528608542  tr(P_3(t|t)): 4.540265436717112\n",
+      "Iteration: 150  tr(P_1(t|t)): 68.84204451871803  tr(P_2(t|t)): 29.165352271980225  tr(P_3(t|t)): 4.908250828872548\n",
+      "Iteration: 200  tr(P_1(t|t)): 69.29980956715376  tr(P_2(t|t)): 29.2428860272951  tr(P_3(t|t)): 5.4703587700490255\n",
+      "Iteration: 10  tr(P_0^m(t|t)): 4.0700571136390735\n",
+      "Iteration: 50  tr(P_0^m(t|t)): 4.26514383936331\n",
+      "Iteration: 100  tr(P_0^m(t|t)): 4.3843230594269285\n",
+      "Iteration: 150  tr(P_0^m(t|t)): 4.518809006311677\n",
+      "Iteration: 200  tr(P_0^m(t|t)): 4.5313322018581195\n",
+      "Iteration: 10  tr(P_0^v(t|t)): 4.076147166511487\n",
+      "Iteration: 50  tr(P_0^v(t|t)): 4.303946232648314\n",
+      "Iteration: 100  tr(P_0^v(t|t)): 4.4312522305615705\n",
+      "Iteration: 150  tr(P_0^v(t|t)): 4.527551062231835\n",
+      "Iteration: 200  tr(P_0^v(t|t)): 4.589765492673597\n",
+      "Iteration: 10  tr(P_0^s(t|t)): 4.085943434624173\n",
+      "Iteration: 50  tr(P_0^s(t|t)): 4.308892907110417\n",
+      "Iteration: 100  tr(P_0^s(t|t)): 4.479463225243681\n",
+      "Iteration: 150  tr(P_0^s(t|t)): 4.642759821616248\n",
+      "Iteration: 200  tr(P_0^s(t|t)): 4.752367919841715\n",
+      "Iteration: 10   tr(P_c(t|t)): 4.068292455637689\n",
+      "Iteration: 50   tr(P_c(t|t)): 4.207388269039572\n",
+      "Iteration: 100   tr(P_c(t|t)): 4.2234884760502025\n",
+      "Iteration: 150   tr(P_c(t|t)): 4.228307333463966\n",
+      "Iteration: 200   tr(P_c(t|t)): 4.2293100753649915\n"
+     ]
+    }
+   ],
    "source": [
     "# Simulation parameters\n",
     "\n",
@@ -291,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,9 +519,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration: 10\n",
+      "  tr(P_0^psof(t|t)): 4.148376941680908\n",
+      "Iteration: 50\n",
+      "  tr(P_0^psof(t|t)): 4.273848056793213\n",
+      "Iteration: 100\n",
+      "  tr(P_0^psof(t|t)): 4.356863498687744\n",
+      "Iteration: 150\n",
+      "  tr(P_0^psof(t|t)): 4.4088134765625\n",
+      "Iteration: 200\n",
+      "  tr(P_0^psof(t|t)): 4.429466247558594\n"
+     ]
+    }
+   ],
    "source": [
     "# Simulation parameters\n",
     "\n",
@@ -542,13 +591,6 @@
     "        print(f\"  tr(P_0^psof(t|t)): {np.trace(P_0)}\")\n",
     "    P_1 = P_2 = P_3 = P_0"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -567,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
