execution results with different set of plots

--- a/dist_fusion_psof.ipynb
+++ b/dist_fusion_psof.ipynb
@@ -944,9 +944,9 @@
     "plt.xlim(xlims)\n",
     "plt.xlabel('Simulation time step')\n",
     "plt.ylabel(f'Position variance')\n",
-    "plt.plot(x_o_vars[0,:], label=\"MC naive\")\n",
-    "#plt.plot(x_o_psof_vars[0,:], label=\"MC PSOF\")\n",
-    "plt.plot([p[0,0] for p in two_layers_psof_feedback_variances], label='PSOF estimates')\n",
+    "plt.plot(x_o_vars[0,:], label=\"MC naive KF\")\n",
+    "plt.plot(x_o_psof_vars[0,:], label=\"MC PSOF\")\n",
+    "#plt.plot([p[0,0] for p in two_layers_psof_feedback_variances], label='PSOF estimate')\n",
     "plt.plot([p[0,0] for p in centralized_kf_variances], label='centralized KF')\n",
     "plt.legend()"
    ]
